2003-06-08  Christian Stimming  <stimming@tuhh.de>

	* src/lib/accnum.cc (AccountNumberCheck_new): Fix stoopid bug that
	prevented proper initialization.

	* configure.in: Released version 0.2
	
	* src/lib/algorithms.{h,cpp}: Moved algorithm functions into
	seperate file to make maintaining easier.

	* src/include/ktoblzcheck.h: Moved code to here.

	* src/include/ktoblzcheck.hh: Added deprecated warning since .hh
	suffix is totally unusual for system-wide installed headers.

2003-05-22  Christian Stimming <stimming@tuhh.de>

	* configure.in: Fixed detection of bankdata installation path.

	* src/bankdata/Makefile.am: Add bankdata.txt to EXTRA_DIST.

2003-05-04  Christian Stimming  <stimming@tuhh.de>

	* src/bankdata/bankdata.txt: Update BLZ list from bundesbank.de to
	the state of 03.03.2003.
	
	* src/lib/ktoblzcheck.cc (check): Fix stupid bug (caused by
	myself) when looking for the method to use.

	* */Makefile.am: Edited all Makefile.am's to use autotools
	standard targets and paths. Now --prefix will adjust all
	installation places accordingly.

	* src/bin/ktoblzcheck.cc: Use the bankdata_path as default data
	file.
	
	* configure.in, src/lib/ktoblzcheck.cc: Removed the
	COMPILE_RESOURCE flag because the compiler would need too much
	memory to compile it anyway. Instead, added the configure switch
	--with-bankdata-path which defaults to $prefix/share/ktoblzcheck,
	and made the default constructor use that location.

	* src/include/ktoblzcheck.hh: Update function documentation.

2003-05-03  Christian Stimming  <stimming@tuhh.de>

	* src/lib/accnum.cc: Add missing include to satisfy gcc3.3.

2003-05-02  Christian Stimming <stimming@tuhh.de>

	* src/lib/accnum.cc: Created new file with the C wrappers inside.

	* src/include/ktoblzcheck.hh: Added a lot of 'const's where
	possible. Added C wrappers for all methods.

	* src/bin/ctest.c: Small test compile file whether the header is C
	compliant.

2003-01-06  Fabian Kaiser  <fabian@openhbci.de>
	* Changelog: Rebuilt
