@@ -1,0 +1,66 @@
+%define name ktoblzcheck
+%define version @rpm_version@
+%define release @rpm_release@
+%define rpm_cxxflags \"-march=i486 -mcpu=i586\"
+%define rpm_cflags \"-march=i486 -mcpu=i586\"
+
+
+# Note: All commands below use %{_prefix}, which is rpm's system
+# default prefix (as defined in /usr/lib/rpm/macros), so this variable
+# is not used inside this spec file.
+#%define prefix @prefix@
+
+Summary: A library to check account numbers and bank codes of German banks.
+Name: %{name}
+Version: %{version}
+Release: %{release}
+Source: http://download.sourceforge.net/ktoblzcheck/%{name}-%{version}.tar.gz
+Group: Libraries/System
+Copyright: LGPL
+Packager: Christian Stimming <stimming@tuhh.de>
+URL: http://sourceforge.net/projects/ktoblzcheck
+BuildRoot: %{_tmppath}/%{name}-%{version}-root
+Prereq: /sbin/ldconfig
+Prefix: %{_prefix}
+
+%description 
+KtoBLZCheck is a library to check account numbers and bank codes of
+German banks. Both a library for other programs as well as a short
+command-line tool is available. It is possible to check pairs of
+account numbers and bank codes (BLZ) of German banks, and to map bank
+codes (BLZ) to the clear-text name and location of the bank.
+
+%prep
+%setup -q
+
+%build
+CXXFLAGS=%{rpm_cxxflags} CFLAGS=%{rpm_cflags}  ./configure --prefix=%{_prefix} 
+
+make
+
+%install
+[ "$RPM_BUILD_ROOT" != "/" ] && rm -rf $RPM_BUILD_ROOT
+
+LIBRARY_PATH=$RPM_BUILD_ROOT%{_libdir} make DESTDIR=$RPM_BUILD_ROOT \
+  install
+
+%clean
+[ "$RPM_BUILD_ROOT" != "/" ] && rm -rf $RPM_BUILD_ROOT
+
+%post
+/sbin/ldconfig
+
+%postun
+/sbin/ldconfig
+
+%files
+%defattr(-,root,root,0755)
+%doc README TODO COPYING ChangeLog
+%{_libdir}/*.la
+%{_libdir}/*.so
+%{_libdir}/*.so.*
+%{_bindir}/ktoblzcheck
+%{_datadir}/ktoblzcheck/bankdata.txt
+%{_includedir}/ktoblzcheck.h
+
+%changelog
